# up_your_english

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.dev  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/src/: core.py  main.py  settings.py
backend/src/adapters/: ai_agent.py  queue.py
backend/src/adapters/ai_agent/: ai_agent.py  helpers.py  prompts.py
backend/src/endpoints/: chat.py  deps.py  router.py  session.py  websocket.py
backend/src/schemas/: chat.py  session.py  websocket.py
backend/src/services/: chat.py  websocket.py
backend/src/tests/: test_app.py
frontend/: .env.dev  Dockerfile  Makefile  biome.json  docker-compose.yml  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/Chat/: index.module.css  index.tsx
frontend/src/components/FloatMenu/: index.module.css  index.tsx
frontend/src/components/Layout/: index.module.css  index.tsx
frontend/src/components/Layout/HeaderContent/: index.tsx
frontend/src/containers/Dashboard/: index.module.css  index.tsx
frontend/src/helpers/: fetchers.ts
frontend/src/hooks/: useFormErrors.ts  useMessage.ts  useTrans.ts
frontend/src/interfaces/: chat.ts  errors.ts
frontend/src/providers/: index.tsx
frontend/src/providers/AntdProvider/: index.tsx
frontend/src/providers/SessionProvider/: index.tsx
frontend/src/providers/WsProvider/: index.tsx
